--- a/Style.less
+++ b/Style.less
@@ -1235,7 +1235,7 @@ div, section {
                     background-image: url('/source/images/block4/b4 icon-pay.png');
                     background-repeat: no-repeat;
                     background-position-y: top 26px;             
-                    height: 110px;
+                    height: 130px;
                     width: 330px;
                     margin-left: 65px;
                     
@@ -1370,8 +1370,9 @@ div, section {
     display: flex;
     
     &--nav {
-        width: 587px;
+        width: 40%;
         margin-top: 260px;
+        margin-left: 7%;
     
         &-title {
             font-family: Yeseva One;
@@ -1381,6 +1382,7 @@ div, section {
             line-height: 37px;
             color: #E3B873;
             text-transform: uppercase;
+            width: 280px;
         }
             
         &-item a {
@@ -1388,9 +1390,15 @@ div, section {
             font-size: 20px;
             line-height: 34px;        
             color: #FFFFFF;
+            text-decoration: none;
+        }
+        &-item li:first-child a {
+            color: #E3B873;
+            text-decoration: underline;
         }
         &-item a:hover {
             font-family: Proxima Nova;
+            text-decoration: underline;
             font-size: 20px;
             line-height: 34px;        
             color: #E3B873;
@@ -1400,32 +1408,100 @@ div, section {
     &--l_imgs {
         width: 354px;
         margin-top: 83px;
+        
+        :nth-child(2) {
+            margin-top: 40px;
+        }
+        :nth-child(3), :nth-child(4), :nth-child(5) {
+            display: none;
+        }        
     }
     &--r_imgs {        
         margin-left: 43px;
         width: 354px;
+
+        :last-child {
+            margin-top: 40px;
+        }
+    }    
+
+    @media (max-width: 1100px) {
+        &--nav {
+            margin-left: 1%;
+        }
+        &--r_imgs {        
+            margin-left: 5px;
+        }
+    }
+
+    @media (max-width: 1020px){
+        height: 387px;
+        flex-direction: column;
+        background-image: none;
+        background-image: url('/source/images/block5/b5 bg.png');
+        background-size: cover;
+        background-position-y: top 266px;
+
+        &--nav {
+            margin: 0 auto;
+            margin-top: 55px;
+            height: 66px;            
+            font-size: 22px;
+            line-height: 138.6%;            
+            text-align: center;
+            width: 300px;                     
+            color: #E3B873;
+
+            ul {
+                display: none;
+            }
+        }
+        &--l_imgs {
+            width: 340px;
+            height: 242px;
+            margin: 0 auto;    
+            position: relative;
+
+            :nth-child(3) {     
+                display: block;
+                margin-top: 24px;
+            }
+
+            :first-child, :nth-child(2) {
+                display: none;
+            }
+
+            :nth-child(4), :nth-child(5) {
+                display: block;
+                width: 36px;
+                height: 36px;
+                border: 0;
+                background-color: #E3B873;
+                background-image: url('/source/images/block5/b5 arrow-left.png');
+                background-repeat: no-repeat;
+                background-position: center;
+                background-position-x: left 12px;
+                border-radius: 50%;
+                position: absolute;
+                margin-top: -142px;
+                margin-left: 14px;
+            }
+            :nth-child(5) {
+                background-image: none;
+                background-image: url('/source/images/block5/b5 arrow-right.png');
+                background-position-x: left 16px;
+                margin-left: 290px;
+            }
+        }
+        &--r_imgs {        
+            display: none;
+        }    
     }
 
     @media (max-width: 375px) {  
-        &--nav-item {
-            display: none;
-        }
-        img {
-            display: none;
-        }
         &--nav-title {
             width: 375px;            
             text-align: center;
-        }
-        &--l_imgs {
-            :first-child {
-                display: block;
-                position: absolute;
-                left: 0;
-                margin-top: 250px;
-                width: 300px;
-                height: 400px;
-            }
         }
     }
 }
